@@ -14,6 +14,11 @@ small - this just lets others know that the file has changed if nothing
 else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 
+server/spell_util.c: Put cap on level used for cast_magic_storm() in
+    prayer_failure() - otherwise, spell can hang the server as it
+    gets cast at super high level.
+MSW 2009-02-04
+
 common/button.c: Fix bug #2457751 "Unpaid items work for some things...". Now
   dropping unpaid items on altars no longer works.
 Arvid Norlander 2009-02-03
